spacing and search fix

--- a/app/components/molecules/card/card-event/index.module.css
+++ b/app/components/molecules/card/card-event/index.module.css
@@ -7,6 +7,7 @@
 
 .title{
   margin: 0.5rem 0 !important;
+  font-size: 18px !important;
 }
 
 .submitted {
